--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Maelys El Araari">
 
+        <meta property='og:title' content='OSWC 2026 - Organization Science Winter Conference'>
+        <meta property='og:image' content='https://oswc26.github.io/oswc26/images/glimpse.png'>
+        <meta property='og:description' content='OSWC 2026 website'>
+        <meta property='og:url' content='https://oswc26.github.io/oswc26/'>
+
         <link rel="stylesheet" href="home_style.css"> 
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
