--- a/venue.html
+++ b/venue.html
@@ -37,14 +37,14 @@
                 54 rue Falguière<br>
                 75015 Paris<br>
                 Tel : 01.43.20.70.70<br>
-                Website : <a href="https://www.hotels-korner.com/hotels/hotel-korner-montparnasse#/booking/search">https://www.hotels-korner.com/hotels/hotel-korner-montparnasse#/booking/search</a>
+                Website : <a href="https://www.hotels-korner.com/hotels/hotel-korner-montparnasse#/booking/search" target="_blank">https://www.hotels-korner.com/hotels/hotel-korner-montparnasse#/booking/search</a>
             </p>
             <p>
                 La maison Montparnasse<br>
                 53, rue de gergovie<br>
                 75014 Paris<br>
                 Tel : 01.45.42.11.39<br>
-                Website : <a href="https://lamaisonmontparnasse.fr/">https://lamaisonmontparnasse.fr/</a>
+                Website : <a href="https://lamaisonmontparnasse.fr/" target="_blank">https://lamaisonmontparnasse.fr/</a>
             </p>
             <h3>3-stars</h3>
             <p>
@@ -52,56 +52,56 @@
                 2 rue Odessa<br>
                 75014 Paris<br>
                 Tel : 01.43.22.25.37<br>
-                Email Address : <a href="mailto:resa@hotelberkeleyparis.com">resa@hotelberkeleyparis.com</a>
+                Email Address : <a href="mailto:resa@hotelberkeleyparis.com" target="_blank">resa@hotelberkeleyparis.com</a>
             </p>
             <p>
                 Hôtel ibis Tour Montparnasse<br>
                 22 avenue du Maine<br>
                 75015 Paris<br>
                 Tel : 01.45.48.95.52<br>
-                Website : <a href="https://all.accor.com/hotel/5302/index.fr.shtml">https://all.accor.com/hotel/5302/index.fr.shtml</a>
+                Website : <a href="https://all.accor.com/hotel/5302/index.fr.shtml" target="_blank">https://all.accor.com/hotel/5302/index.fr.shtml</a>
             </p>
             <p>
                 Hôtel Ibis Gare Montparnasse<br>
                 71 boulevard de Vaugirard<br>
                 75015 Paris<br>
                 Tel : 01.43.20.89.12<br>
-                Website : <a href="https://all.accor.com/hotel/1875/index.fr.shtml">https://all.accor.com/hotel/1875/index.fr.shtml</a>
+                Website : <a href="https://all.accor.com/hotel/1875/index.fr.shtml" target="_blank">https://all.accor.com/hotel/1875/index.fr.shtml</a>
             </p>
             <p>
                 Hôtel Miramar<br>
                 6, place Bienvenue<br>
                 75015 Paris<br>
                 Tel : 01.45.48.62.94<br>
-                Website : <a href="https://hotelmiramar75.com/">https://hotelmiramar75.com/</a>
+                Website : <a href="https://hotelmiramar75.com/" target="_blank">https://hotelmiramar75.com/</a>
             </p>
             <p>
                 Louison Hotel<br>
                 105 rue de Vaugirard<br>
                 75006 Paris<br>
                 Tel : 01.53.63.25.50<br>
-                Website : <a href="https://www.louison-hotel.com/">https://www.louison-hotel.com/</a>
+                Website : <a href="https://www.louison-hotel.com/" target="_blank">https://www.louison-hotel.com/</a>
             </p>
             <p>
                 TimHotel paris Gare Montparnasse<br>
                 22 rue de l’arrivée<br>
                 75015 Paris<br>
                 Tel : 01.45.48.96.62<br>
-                Website : <a href="https://www.timhotel-paris-gare-montparnasse.fr/">https://www.timhotel-paris-gare-montparnasse.fr/</a>
+                Website : <a href="https://www.timhotel-paris-gare-montparnasse.fr/" target="_blank">https://www.timhotel-paris-gare-montparnasse.fr/</a>
             </p>
             <p>
                 Hôtel Edouard VI Montparnasse<br>
                 61 boulevard de Montparnasse<br>
                 75006 paris<br>
                 Tel 01.45.48.94.99<br>
-                Website : <a href="https://www.hoteledouard6.com/">https://www.hoteledouard6.com/</a>
+                Website : <a href="https://www.hoteledouard6.com/" target="_blank">https://www.hoteledouard6.com/</a>
             </p>
             <p>
                 Arcadie Montparnasse<br>
                 71 avenue du Maine<br>
                 75014 Paris<br>
                 Tel : 01.43.20.91.11<br>
-                Website : <a href="https://www.hotelarcadie.com/">https://www.hotelarcadie.com/</a>
+                Website : <a href="https://www.hotelarcadie.com/" target="_blank">https://www.hotelarcadie.com/</a>
             </p>
             <h3>4-stars</h3>
             <p>
@@ -109,21 +109,21 @@
                 20 Rue de la Gaité<br>
                 75014 Paris<br>
                 Tel : 01.87.21.29.54<br>
-                Website : <a href="https://all.accor.com/hotel/0905/index.fr.shtml">https://all.accor.com/hotel/0905/index.fr.shtml</a>
+                Website : <a href="https://all.accor.com/hotel/0905/index.fr.shtml" target="_blank">https://all.accor.com/hotel/0905/index.fr.shtml</a>
             </p>
             <p>
                 15Montparnasse<br>
                 153, Rue de Vaugirard<br>
                 75015 Paris<br>
                 Tel : 01.47.34.56.75<br>
-                Website : <a href="https://www.hotel-15-montparnasse.fr/">https://www.hotel-15-montparnasse.fr/</a>
+                Website : <a href="https://www.hotel-15-montparnasse.fr/" target="_blank">https://www.hotel-15-montparnasse.fr/</a>
             </p>
             <p>
                 Pullman Montparnasse<br>
                 19 Rue du Commandant René Mouchotte<br>
                 75014 Paris<br>
                 Tel : 01.44.36.44.36<br>
-                Website : <a href="https://all.accor.com/hotel/8189/index.fr.shtml">https://all.accor.com/hotel/8189/index.fr.shtml</a>
+                Website : <a href="https://all.accor.com/hotel/8189/index.fr.shtml" target="_blank">https://all.accor.com/hotel/8189/index.fr.shtml</a>
             </p>
 
         </main>
